objects/Inventory__c.object
<CustomObject>
    <fields>
        <fullName>Energy_Record_Id__c</fullName>
        <externalId>true</externalId>
        <label>Energy Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiry_date__c</fullName>
        <label>Expiry date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ext_Cost__c</fullName>
        <label>Ext Cost</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inventory_Created_Date__c</fullName>
        <label>Inventory Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inventory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory</label>
        <referenceTo>Inventory__c</referenceTo>
        <relationshipLabel>Inventories</relationshipLabel>
        <relationshipName>Inventories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot_Serial__c</fullName>
        <label>Lot/Serial</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MFGPRO__c</fullName>
        <description>Used as external id to upload inventory from MFGPRO</description>
        <externalId>true</externalId>
        <inlineHelpText>Used as external id to upload inventory from MFGPRO</inlineHelpText>
        <label>MfgproPartNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartNbr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Part__c</referenceTo>
        <relationshipLabel>Inventories</relationshipLabel>
        <relationshipName>Inventories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <label>Part Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QOH_Nettable__c</fullName>
        <label>QOH Nettable</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QOH_Non_nettable__c</fullName>
        <label>QOH Non-nettable</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QOH__c</fullName>
        <label>QOH</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qty_on_Hand_Grade_Net__c</fullName>
        <label>Qty on Hand Grade Net</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ref__c</fullName>
        <label>Ref</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <label>Site</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2230</fullName>
                </value>
                <value>
                    <fullName>2231</fullName>
                </value>
                <value>
                    <fullName>2241</fullName>
                </value>
                <value>
                    <fullName>2244</fullName>
                </value>
                <value>
                    <fullName>2245</fullName>
                </value>
                <value>
                    <fullName>2224</fullName>
                    <isActive>false</isActive>
                    <label>2224</label>
                </value>
                <value>
                    <fullName>2240</fullName>
                    <isActive>false</isActive>
                    <label>2240</label>
                </value>
                <value>
                    <fullName>2330</fullName>
                    <isActive>false</isActive>
                    <label>2330</label>
                </value>
                <value>
                    <fullName>2570</fullName>
                    <isActive>false</isActive>
                    <label>2570</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Standard_Cost__c</fullName>
        <label>Standard Cost</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OH</fullName>
                </value>
                <value>
                    <fullName>DOTRANS</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DROP</fullName>
                </value>
                <value>
                    <fullName>HOLD</fullName>
                </value>
                <value>
                    <fullName>EXPIRED</fullName>
                </value>
                <value>
                    <fullName>EXPIRING</fullName>
                </value>
                <value>
                    <fullName>II</fullName>
                </value>
                <value>
                    <fullName>MOVE</fullName>
                </value>
                <value>
                    <fullName>NCR</fullName>
                </value>
                <value>
                    <fullName>QUAR</fullName>
                </value>
                <value>
                    <fullName>QUAREXCP</fullName>
                </value>
                <value>
                    <fullName>TRANS</fullName>
                </value>
                <value>
                    <fullName>WIP</fullName>
                </value>
                <value>
                    <fullName>BLANK</fullName>
                    <isActive>false</isActive>
                    <label>BLANK</label>
                </value>
                <value>
                    <fullName>CYCNT</fullName>
                    <isActive>false</isActive>
                    <label>CYCNT</label>
                </value>
                <value>
                    <fullName>DISC</fullName>
                    <isActive>false</isActive>
                    <label>DISC</label>
                </value>
                <value>
                    <fullName>HAZARD</fullName>
                    <isActive>false</isActive>
                    <label>HAZARD</label>
                </value>
                <value>
                    <fullName>MOVE2</fullName>
                    <isActive>false</isActive>
                    <label>MOVE2</label>
                </value>
                <value>
                    <fullName>SCRAP</fullName>
                    <isActive>false</isActive>
                    <label>SCRAP</label>
                </value>
                <value>
                    <fullName>qahold</fullName>
                    <isActive>false</isActive>
                    <label>qahold</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Inventory</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_inv</fullName>
        <columns>NAME</columns>
        <columns>Inventory__c</columns>
        <columns>Part_Number__c</columns>
        <columns>MFGPRO__c</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>IN-{00000}</displayFormat>
        <label>Item No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>